logo gap fixed to be responsive

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     padding:20px ;
     display: flex;
     justify-content: space-between;
+    gap: 10px;
     align-items: center;
     position:sticky;
     top:0;
